update widths and styles to improve responsiveness; remove several custom attributes of select element so matches browser defaults (and fix Chrome text cut off)

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .doc {
 	margin: 0 auto;
+	width: 100%;
 	max-width: 800px;
 }
 
@@ -75,10 +76,11 @@ h1 {
 #imgs {
 	margin: 0 auto;
 	width: 600px;
+	max-width: 100%;
 }
 
 #imgs img {
-	width: 600px;
+	width: 100%;
 }
 
 #settings {
@@ -107,6 +109,15 @@ label {
 	font-weight: bold;
 }
 
+@media only screen and (max-width: 551px) {
+	label {
+		text-align: left;
+	}
+	#settings > div {
+		max-width: 350px;
+	}
+}
+
 label.line1 {
 	font-size: 125%;
 	font-weight: 700;
@@ -120,10 +131,9 @@ label.line3 {
 	font-weight: 400;
 }
 
-
 /*===========================================================================*/
 /* Styled <select> elements from https://github.com/filamentgroup/select-css */
-/* Modified slightly to match NC State branding and app styles.
+/* Modified to match NC State branding and app styles.
 
 /* class applies to select element itself, not a wrapper element */
 .select-css {
@@ -138,21 +148,6 @@ label.line3 {
 	box-sizing: border-box;
 	margin: 0;
 	border: 1px solid #aaa;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	appearance: none;
-	background-color: #fff;
-	/* note: bg image below uses 2 urls. The first is an svg data uri for the arrow icon, and the second is the gradient.
-	for the icon, if you want to change the color, be sure to use `%23` instead of `#`, since it's a url. You can also swap in a different svg icon or an external image reference
-
-	*/
-	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-	linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
-	background-repeat: no-repeat, repeat;
-	/* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
-	background-position: right .7em top 50%, 0 0;
-	/* icon size, then gradient */
-	background-size: .65em auto, 100%;
 }
 
 /* Hide arrow icon in IE browsers */
